--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="content-footer">
+    <p>Copyright &copy; 2023 by Money Manger | All Rights Reserved</p>
+</div>
+
+
