--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+:root {
+    --bg-color: #17356d;
+    --text-color: #fff;
+}
+
 body{
     margin: 0;
 }
