--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,3 +1,13 @@
+.content-footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 9%;
+    background-color: var(--bg-color);
+}
+
+
 p{
-    color: chocolate;
+    font-family: sans-serif;
+    color: var(--text-color);
 }
