--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -27,6 +27,7 @@
             matInput
             [type]="hide ? 'password' : 'text'"
             formControlName="password"
+            autocomplete="off"
           />
           <button
             mat-icon-button
