--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,6 +14,7 @@
         <a mat-button routerLink="/prices">Home</a>
         <a mat-button routerLink="/about-us">Graphics</a>
         <a mat-button routerLink="/start-page">Accounts</a>
+        <a mat-button routerLink="/admin" *ngIf="checkPerm([])">admin</a>
       </div>
 
       <button
