--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-@if (isLogged) {
+@if(logged){
 <app-navbar></app-navbar>
 }
+
 <router-outlet></router-outlet>
-@if (isLogged) {
+
+@if(logged){
 <app-footer></app-footer>
 }
