--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -65,8 +65,8 @@
       </p>
       <p class="user-interaction">
         Forgot your password?
-        <a routerLink="/restore-password" style="cursor: pointer"
-          >Change password</a
+        <a (click)="showModalRecoverPass()" style="cursor: pointer"
+          >Recover password</a
         >
       </p>
     </div>
