--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<mat-tab-group>
+  <mat-tab label="Expenses">
+    <ng-template matTabContent>
+        <button mat-raised-button color="primary" (click)="addExpense()">Add Expense</button>
+    </ng-template>
+    
+    <!-- 
+        <ag-grid-angular
+        [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
+        [rowData]="rowData"
+      ></ag-grid-angular> 
+     -->
+  </mat-tab>
+  <mat-tab label="Incomes"> 
+    <ng-template matTabContent>
+        <button mat-raised-button color="primary" (click)="addExpense()">Add Income</button>
+    </ng-template>
+    
+  </mat-tab>
+</mat-tab-group>
