--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import "../node_modules/ag-grid-community/styles/ag-grid.min.css";
+@import "../node_modules/ag-grid-community/styles/ag-theme-quartz.min.css";
+
+
 
 :root {
     --bg-color: #17356d;
