--- a/src/app/modals/dynamic-expense-income-modal/dynamic-expense-income-modal.component.scss
+++ b/src/app/modals/dynamic-expense-income-modal/dynamic-expense-income-modal.component.scss
@@ -1,6 +1,13 @@
 ::ng-deep .mat-radio-container-no-show .mdc-radio {
     display:none;
 }
+
+::ng-deep .mat-radio-container-no-show .mdc-label {
+   display: flex !important;
+   align-items: center !important;
+   justify-content: center !important;
+}
+
  .container-label{
     text-align: center;
     margin-bottom: 10px;
