--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,24 +1,12 @@
 <mat-tab-group>
   <mat-tab label="Expenses">
     <ng-template matTabContent>
-      <button mat-raised-button color="primary" (click)="addExpense()">
-        Add Expense
-      </button>
+      <app-expense></app-expense>
     </ng-template>
-
-    <!-- 
-        <ag-grid-angular
-        [columnDefs]="columnDefs"
-        [defaultColDef]="defaultColDef"
-        [rowData]="rowData"
-      ></ag-grid-angular> 
-     -->
   </mat-tab>
   <mat-tab label="Incomes">
     <ng-template matTabContent>
-      <button mat-raised-button color="primary" (click)="addIncome()">
-        Add Income
-      </button>
+      <app-income></app-income>
     </ng-template>
   </mat-tab>
 </mat-tab-group>
