--- a/src/app/modals/dynamic-expense-income-modal/dynamic-expense-income-modal.component.scss
+++ b/src/app/modals/dynamic-expense-income-modal/dynamic-expense-income-modal.component.scss
@@ -3,9 +3,9 @@
 }
 
 ::ng-deep .mat-radio-container-no-show .mdc-label {
-   display: flex !important;
-   align-items: center !important;
-   justify-content: center !important;
+   display: flex;
+   align-items: center;
+   justify-content: center;
 }
 
  .container-label{
