Design cards dashboard

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,6 +13,7 @@
       <div class="menu-routes">
         <a mat-button routerLink="/prices">Home</a>
         <a mat-button routerLink="/about-us">Graphics</a>
+        <a mat-button routerLink="/info">Info</a>
         <a mat-button routerLink="/start-page">Accounts</a>
         <a mat-button routerLink="/admin" *ngIf="checkPerm([])">admin</a>
       </div>
