--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,1 @@
-<mat-tab-group>
-  <mat-tab label="Expenses">
-    <ng-template matTabContent>
-      <app-expense></app-expense>
-    </ng-template>
-  </mat-tab>
-  <mat-tab label="Incomes">
-    <ng-template matTabContent>
-      <app-income></app-income>
-    </ng-template>
-  </mat-tab>
-</mat-tab-group>
+<app-dashboard></app-dashboard>
