--- a/src/app/pages/home/components/dashboard/dashboard.component.html
+++ b/src/app/pages/home/components/dashboard/dashboard.component.html
@@ -55,12 +55,15 @@
 <mat-card>
   <mat-card-content>
     <mat-grid-list cols="2" rowHeight="2:1">
+      @if( data.expenses && data.incomes){
       <mat-grid-tile>
         <app-line-chart [data]="data" />
       </mat-grid-tile>
+
       <mat-grid-tile>
         <app-doughnut-chart [data]="data" />
       </mat-grid-tile>
+      }
     </mat-grid-list>
   </mat-card-content>
 </mat-card>
