--- a/src/app/pages/home/components/line-chart/line-chart.component.scss
+++ b/src/app/pages/home/components/line-chart/line-chart.component.scss
@@ -1,6 +1,8 @@
 .chart-container {
-  height: 80vh;
+  height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
+  min-height: 300px;
+  min-width: 500px;
 }
